@@ -1,22 +1,27 @@
-# Run Travis CI for R using https://eddelbuettel.github.io/r-travis/
+# Run CI for R using https://eddelbuettel.github.io/r-ci/
 
 language: c
 sudo: required
-dist: bionic
+dist: focal
 
 jobs:
   include:
-    #- name: r-3.5
-    #  env: R_VERSION="3.5"
-    - name: r-4.0
-      env: R_VERSION="4.0"
+    - name: linux
+      os: linux
+    #- name: macOS
+    #  os: osx
+
+env:
+  global:
+    - USE_BSPM="true"
+    - _R_CHECK_FORCE_SUGGESTS_="false"
 
 before_install:
-  - curl -OLs https://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
+  - curl -OLs https://eddelbuettel.github.io/r-ci/run.sh && chmod 0755 run.sh
   - ./run.sh bootstrap
 
 #install:
-#  - ./run.sh install_aptget 
+#  - ./run.sh install_all
   
 script:
   - ./run.sh run_tests
