@@ -1,3 +1,7 @@
+2020-11-21  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .travis.yml: Switch to focal, bspm, and r-ci
+
 2020-07-13  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll minor version
